objects/ISR_Target__c.object
<CustomObject>
    <fields>
        <fullName>Administrator_s_Contact_info__c</fullName>
        <inlineHelpText>What is the administrator&apos;s contact information?</inlineHelpText>
        <label>Administrator&apos;s Contact info</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_way_to_contact_decision_maker__c</fullName>
        <inlineHelpText>What is the best way to contact the decision maker?</inlineHelpText>
        <label>Best way to contact decision maker?</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Notes__c</fullName>
        <label>Call Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Result__c</fullName>
        <inlineHelpText>Call Result</inlineHelpText>
        <label>Call Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Left Voicemail</fullName>
                </value>
                <value>
                    <fullName>Spoke to Office Admin</fullName>
                </value>
                <value>
                    <fullName>Spoke to Nursing Staff</fullName>
                </value>
                <value>
                    <fullName>Spoke to Prescriber (MD/DO, NP/PA)</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                    <isActive>false</isActive>
                    <label>Wrong Number</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currently_using_liquid_biopsy_testing__c</fullName>
        <inlineHelpText>Is the practice currently using liquid biopsy testing?</inlineHelpText>
        <label>Currently using liquid biopsy testing?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_office_know_liquid_biopsy_benefits__c</fullName>
        <label>Does office know liquid biopsy benefits?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facilitator_of_Specialty_Tests__c</fullName>
        <inlineHelpText>If there is no Precision Medicine Navigator, who is the facilitator of specialty tests?</inlineHelpText>
        <label>Facilitator of Specialty Tests?</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISR_Contact__c</fullName>
        <label>ISR Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ISR Targets</relationshipLabel>
        <relationshipName>ISR_Targets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Inservice_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Did the office request an inservice visit from the AE?</inlineHelpText>
        <label>Inservice Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lab_Director__c</fullName>
        <inlineHelpText>Does one of the providers acts as the laboratory director?</inlineHelpText>
        <label>Lab Director?</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NGS_Laboratory__c</fullName>
        <inlineHelpText>What laboratory do you use for NGS? If it’s the hospital, then who do they send to for testing?</inlineHelpText>
        <label>NGS Laboratory?</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NGS_on_tissue__c</fullName>
        <inlineHelpText>Do you use NGS on tissue as part of standard testing before treatment?​</inlineHelpText>
        <label>NGS on tissue?</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Entry__c</fullName>
        <description>Hidden field used to update &apos;Call Notes&apos; field</description>
        <label>Note Entry</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Precision_Medicine_navigator__c</fullName>
        <inlineHelpText>Does the practice have a Precision Medicine Navigator? If so, who?</inlineHelpText>
        <label>Precision Medicine navigator?</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_a_Kit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Did the office request a kit?</inlineHelpText>
        <label>Request a Kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sample_Received_from_Office__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Was a sample received from the office?</inlineHelpText>
        <label>Sample Received from Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_of_Call__c</fullName>
        <label>Time of Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Which_doctor_is_the_decision_maker__c</fullName>
        <inlineHelpText>Which doctor is the decision maker in the practice?</inlineHelpText>
        <label>Which doctor is the decision maker?</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <label>ISR Target</label>
    <nameField>
        <label>ISR Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ISR Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>